# MyFiles

./: .gitignore  C++ для чайников.cpp  CMakeLists.txt  README.md  bigint.cpp  bigint_test.cpp  main.cpp
BigInt/: CMakeLists.txt  bigint.cpp  bigint.h  main.cpp
CSVParser/: Parser.h  PrintTuple.h  input.csv  main.cpp
GameProject/GeometryDash/: Cube.cpp  Cube.h  Level.cpp  Level.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Ship.cpp  Ship.h  StartGame.cpp  TmxLevel.cpp  TmxLevel.h  main.cpp  temp.cpp  tmxlevel.cpp
GameProject/GeometryDash/Resources/tiles/: SBG.tsx  StereoMadness.tmx  map.tmx  map2.tmx  map4.tmx
GameProject/GeometryDash/TinyXML/: TinyXML2.cpp
first_course/: README.md
first_course/c_programming_labs/: README.md
first_course/c_programming_labs/lab0/: README.md
first_course/c_programming_labs/lab1-0/: README.md
first_course/c_programming_labs/lab1-1/: README.md
first_course/c_programming_labs/lab2/: README.md
first_course/c_programming_labs/lab3-0/: README.md
first_course/c_programming_labs/lab3-1/: README.md
first_course/c_programming_labs/lab4/: README.md
first_course/c_programming_labs/lab5/: README.md
first_course/c_programming_labs/lab6/: README.md
first_course/c_programming_labs/lab7/: README.md
first_course/c_programming_labs/lab8-0/: README.md
first_course/c_programming_labs/lab8-1/: README.md
first_course/c_programming_labs/lab9/: README.md
second_course/: README.md
second_course/c_cpp_labs/: README.md
second_course/c_cpp_labs/oop_labs/: README.md
second_course/java_labs/oop_labs/lab1/: todo.txt
(+117 files in other folders)
